--- a/stups-cli/requirements_frozen.txt
+++ b/stups-cli/requirements_frozen.txt
@@ -1,7 +1,7 @@
 appdirs==1.4.3
 arrow==0.10.0
 boto3==1.4.7
-botocore==1.7.25
+botocore==1.7.28
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
@@ -10,6 +10,7 @@ dnspython==1.15.0
 docutils==0.14
 idna==2.6
 jmespath==0.9.3
+kmsclient==0.3
 packaging==16.8
 py==1.4.34
 PyJWT==1.5.3
