--- a/stups-cli/requirements_frozen.txt
+++ b/stups-cli/requirements_frozen.txt
@@ -1,13 +1,14 @@
 appdirs==1.4.3
 arrow==0.10.0
 boto3==1.4.7
-botocore==1.7.28
+botocore==1.7.29
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 clickclick==1.2.2
 dnspython==1.15.0
 docutils==0.14
+easydict==1.7
 idna==2.6
 jmespath==0.9.3
 kmsclient==0.3
@@ -38,3 +39,4 @@ urllib3==1.22
 zalando-aws-cli==1.1.6
 zalando-deploy-cli==0.33.1
 zalando-kubectl==1.7.6.post7
+zmon-cli==1.1.54
