update stups stuff

--- a/stups-cli/requirements_frozen.txt
+++ b/stups-cli/requirements_frozen.txt
@@ -1,7 +1,8 @@
 appdirs==1.4.3
-arrow==0.10.0
-boto3==1.4.7
-botocore==1.7.39
+arrow==0.12.0
+attrs==17.3.0
+boto3==1.4.8
+botocore==1.8.2
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
@@ -13,22 +14,24 @@ idna==2.6
 jmespath==0.9.3
 kmsclient==0.3
 packaging==16.8
-py==1.4.34
+pluggy==0.6.0
+py==1.5.2
 PyJWT==1.5.3
 pyparsing==2.2.0
-pyperclip==1.5.32
+pyperclip==1.6.0
 pystache==0.5.4
-pytest==3.2.3
+pytest==3.3.0
 python-dateutil==2.6.1
 PyYAML==3.12
 raven==6.3.0
 requests==2.18.4
 s3transfer==0.1.11
+scm-source==1.0.11
 six==1.11.0
 stups==1.1.15
 stups-cli-support==1.1.15
 stups-fullstop==1.1.31
-stups-kio==0.1.19
+stups-kio==0.1.20
 stups-pierone==1.1.30
 stups-piu==1.1.16
 stups-senza==2.1.84
