--- a/stups-cli/requirements_frozen.txt
+++ b/stups-cli/requirements_frozen.txt
@@ -2,7 +2,7 @@ appdirs==1.4.3
 arrow==0.12.0
 attrs==17.3.0
 boto3==1.4.8
-botocore==1.8.2
+botocore==1.8.8
 certifi==2017.11.5
 chardet==3.0.4
 click==6.7
@@ -20,16 +20,17 @@ PyJWT==1.5.3
 pyparsing==2.2.0
 pyperclip==1.6.0
 pystache==0.5.4
-pytest==3.3.0
+pytest==3.3.1
 python-dateutil==2.6.1
 PyYAML==3.12
 raven==6.3.0
 requests==2.18.4
-s3transfer==0.1.11
+s3transfer==0.1.12
 scm-source==1.0.11
 six==1.11.0
 stups==1.1.15
-stups-cli-support==1.1.15
+stups-berry==1.0.28
+stups-cli-support==1.1.18
 stups-fullstop==1.1.31
 stups-kio==0.1.20
 stups-pierone==1.1.30
