--- a/stups-cli/requirements_frozen.txt
+++ b/stups-cli/requirements_frozen.txt
@@ -1,9 +1,9 @@
 appdirs==1.4.3
-arrow==0.12.0
-attrs==17.3.0
-boto3==1.4.8
-botocore==1.8.8
-certifi==2017.11.5
+arrow==0.12.1
+attrs==17.4.0
+boto3==1.6.18
+botocore==1.9.18
+certifi==2018.1.18
 chardet==3.0.4
 click==6.7
 clickclick==1.2.2
@@ -13,34 +13,35 @@ easydict==1.7
 idna==2.6
 jmespath==0.9.3
 kmsclient==0.3
+more-itertools==4.1.0
 packaging==16.8
 pluggy==0.6.0
-py==1.5.2
-PyJWT==1.5.3
+py==1.5.3
+PyJWT==1.6.1
 pyparsing==2.2.0
 pyperclip==1.6.0
 pystache==0.5.4
-pytest==3.3.1
+pytest==3.5.0
 python-dateutil==2.6.1
 PyYAML==3.12
-raven==6.3.0
+raven==6.6.0
 requests==2.18.4
-s3transfer==0.1.12
+s3transfer==0.1.13
 scm-source==1.0.11
 six==1.11.0
 stups==1.1.15
 stups-berry==1.0.28
-stups-cli-support==1.1.18
+stups-cli-support==1.1.20
 stups-fullstop==1.1.31
 stups-kio==0.1.20
 stups-pierone==1.1.30
 stups-piu==1.1.16
-stups-senza==2.1.84
+stups-senza==2.1.96
 stups-tokens==1.1.19
 stups-zign==1.1.31
-typing==3.6.2
+typing==3.6.4
 urllib3==1.22
-zalando-aws-cli==1.1.6
-zalando-deploy-cli==0.33.1
-zalando-kubectl==1.7.6.post8
-zmon-cli==1.1.54
+zalando-aws-cli==1.2.4.22
+zalando-deploy-cli==1.0.10
+zalando-kubectl==1.9.3.30
+zmon-cli==1.1.56
